Particle distribution overlaps if number is greater than 256 #44353

Closed
opened 2015-04-11 18:52:42 +02:00 by r3aktor · 17 comments

Windows 7 x64 Nvidia 550Ti

Broken: 2.74
Worked: 2.73

Particle distribution(Random, Jittered is OK) overlaps if number of particles is greater than 256
Particles are created at the same place as the previous ones.ParticleEmissionBug2.74.blend

Windows 7 x64 Nvidia 550Ti Broken: 2.74 Worked: 2.73 Particle distribution(Random, Jittered is OK) overlaps if number of particles is greater than 256 Particles are created at the same place as the previous ones.[ParticleEmissionBug2.74.blend](https://archive.blender.org/developer/F161006/ParticleEmissionBug2.74.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @r3aktormk

Added subscriber: @r3aktormk

Added subscriber: @RobertGarlington

Added subscriber: @RobertGarlington

I can confirm that this is the case with 2.74. When setting a particle system distribution to 'Random' while using a custom mesh group, as with the Grass Essentials product, the particles overlap each other, but in 'Jittered' mode they work fine by distributing equally.

I can confirm that this is the case with 2.74. When setting a particle system distribution to 'Random' while using a custom mesh group, as with the Grass Essentials product, the particles overlap each other, but in 'Jittered' mode they work fine by distributing equally.

Added subscriber: @AndrewPrice

Added subscriber: @AndrewPrice

Ditto that! Anyone know how complex it would be to fix?

Ditto that! Anyone know how complex it would be to fix?
Lukas Tönne was assigned by Sergey Sharybin 2015-04-14 11:16:48 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This could be the change related on pre-calculating random table for particles, which was needed for the threading stability.

Assigning to Lukas for further investigation.

This could be the change related on pre-calculating random table for particles, which was needed for the threading stability. Assigning to Lukas for further investigation.
Member

Added subscriber: @brita

Added subscriber: @brita
Member

Lukas: bisecting points to fe8fad54b1

Lukas: bisecting points to fe8fad54b1

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Could also be linked to this bug as well -- #43981

Could also be linked to this bug as well -- #43981

This issue was referenced by 86f80c481c

This issue was referenced by 86f80c481cc1de4ddc722cd83913d2643c03474b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 86f80c481c.

Closed by commit 86f80c481c.

Added subscriber: @brecht

Added subscriber: @brecht

Thanks for the report, fixed now.

Thanks for the report, fixed now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44353
No description provided.