Fix T44353, Fix T43981: random particle distribution overlaps if number is greater than 256.